@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-14T16:17:12Z",
-  "count_outdated" : 332,
-  "uniques_outdated" : 177,
-  "count" : 361,
-  "uniques" : 195,
+  "timestamp" : "2022-06-15T01:02:38Z",
+  "count_outdated" : 336,
+  "uniques_outdated" : 180,
+  "count" : 365,
+  "uniques" : 197,
   "clones" : [
-    {
-      "timestamp": "2022-05-31T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 3,
-      "uniques_minmax": [ 1, 3 ]
-    },
     {
       "timestamp": "2022-06-01T00:00:00Z",
       "count": 1,
@@ -105,10 +98,10 @@
     },
     {
       "timestamp": "2022-06-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 5,
+      "count_minmax": [ 1, 5 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ]
     }
   ]
 }
