@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2022-05-31T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
-    {
       "timestamp": "2022-06-01T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2022-06-14T00:00:00Z",
-      "count": 2,
-      "uniques": 1
+      "count": 5,
+      "uniques": 3
     }
   ]
 }
