@@ -1,3 +1,10 @@
+2022-06-15T01:02:38Z:
+* notice: last 14d: unq all: 4 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 177 332 / 195 361
+* notice: next accum: outdated-unq outdated-all / unq all: 180 336 / 197 365
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +3 +5 -0 -0 / 3 5
+* notice: removed / changed dates: [2022-05-31] / [2022-06-14]
+
 2022-06-14T16:17:12Z:
 * notice: last 14d: unq all: 4 29
 * notice: prev accum: outdated-unq outdated-all / unq all: 177 332 / 195 360
